Updating elliptic package

--- a/src/js/package.json
+++ b/src/js/package.json
@@ -20,7 +20,8 @@
 		"jsonwebtoken": "^8.1.0",
 		"jwk-to-pem": "^1.2.6",
 		"acorn": ">=7.1.1",
-		"minimist": ">=0.2.1"
+		"minimist": ">=0.2.1",
+		"elliptic": ">=6.5.3"
 	},
 	"devDependencies": {
 		"@types/node": "^12.7.8",
