Added CloudFront Access Logging

--- a/template.yaml
+++ b/template.yaml
@@ -46,6 +46,9 @@ Resources:
     CFDistribution:
         Type: AWS::CloudFront::Distribution
         Properties:
+          DistributionConfig:
+            Logging:
+              Enabled: true
           CustomOriginConfig:
             OriginProtocolPolicy:
               - https-only
