--- a/template.yaml
+++ b/template.yaml
@@ -15,18 +15,25 @@ Resources:
         Type: 'AWS::S3::Bucket'
         Properties:
             BucketName: !Ref BucketName
+            AccessControl: "LogDeliveryWrite"
             BucketEncryption:
-              ServerSideEncryptionConfiguration:
-                ServerSideEncryptionByDefault:
-                  - SSEAlgorithm: AES256
-    AccessLoggingBucket:
+              ServerSideEncryptionConfiguration: 
+                -
+                  ServerSideEncryptionByDefault:
+                    SSEAlgorithm: AES256
+            LoggingConfiguration:
+              DestinationBucketName: !Ref S3AccessLoggingBucket
+              LogFilePrefix: "accessLogs/"
+    S3AccessLoggingBucket:
         Type: 'AWS::S3::Bucket'
         Properties:
             BucketName: !Sub "${BucketName}-access-logging"
+            AccessControl: "LogDeliveryWrite"
             BucketEncryption:
-              ServerSideEncryptionConfiguration:
-                ServerSideEncryptionByDefault:
-                  - SSEAlgorithm: AES256
+              ServerSideEncryptionConfiguration: 
+                -
+                  ServerSideEncryptionByDefault:
+                    SSEAlgorithm: AES256
     ReadPolicy:
      Type: 'AWS::S3::BucketPolicy'
      Properties:
@@ -45,18 +52,16 @@ Resources:
          Comment: !Ref S3Bucket
     CFDistribution:
         Type: AWS::CloudFront::Distribution
-        Properties:
+        # ViewerCertificate:
+        #         CloudFrontDefaultCertificate: 'true'
+        #         SSLSupportMethod: sni-only
+        #         MinimumProtocolVersion: TLSv1.2_2018 
+        Properties:           
           DistributionConfig:
-          CustomOriginConfig:
-            OriginProtocolPolicy:
-              - https-only
-            OriginSSLProtocols:
-              - TLSv1.2
-          Logging:
-              Bucket: !Ref AccessLoggingBucket
+            Logging:
+              Bucket: !GetAtt S3AccessLoggingBucket.DomainName
               IncludeCookies : "true"
               Prefix: "cloudfront/"
-          DistributionConfig:
             Enabled: 'true'
             Origins:
             - DomainName: !GetAtt S3Bucket.DomainName
