--- a/template.yaml
+++ b/template.yaml
@@ -10,9 +10,13 @@ Parameters:
     SecretKeyName:
         Type: String
         Description: The name of the Secret in Secrets manager for the OIDC configuaration (e.g. okta-configuration-v4cw9Z)
+    MinimumTLSVersion:
+        Type: String
+        Description: The minimum version to use for CloudFront TLS
+        Default: TLSv1.2_2018
 Resources:
     S3Bucket:
-        Type: 'AWS::S3::Bucket'
+        Type: AWS::S3::Bucket
         Properties:
             BucketName: !Ref BucketName
             BucketEncryption:
@@ -25,7 +29,7 @@ Resources:
               LogFilePrefix: "accessLogs/"
 
     S3AccessLoggingBucket:
-        Type: 'AWS::S3::Bucket'
+        Type: AWS::S3::Bucket
         Properties:
             BucketName: !Sub "${BucketName}-access-logging"
             AccessControl: "LogDeliveryWrite"
@@ -35,7 +39,7 @@ Resources:
                   ServerSideEncryptionByDefault:
                     SSEAlgorithm: AES256
     ReadPolicy:
-     Type: 'AWS::S3::BucketPolicy'
+     Type: AWS::S3::BucketPolicy
      Properties:
         Bucket: !Ref S3Bucket
         PolicyDocument:
@@ -46,7 +50,7 @@ Resources:
            Principal:
              CanonicalUser: !GetAtt CloudFrontOriginAccessIdentity.S3CanonicalUserId
     CloudFrontOriginAccessIdentity:
-     Type: 'AWS::CloudFront::CloudFrontOriginAccessIdentity'
+     Type: AWS::CloudFront::CloudFrontOriginAccessIdentity
      Properties:
         CloudFrontOriginAccessIdentityConfig:
          Comment: !Ref S3Bucket
@@ -56,8 +60,7 @@ Resources:
           DistributionConfig:
             ViewerCertificate:
               CloudFrontDefaultCertificate: 'true'
-              # SslSupportMethod: sni-only
-              MinimumProtocolVersion: TLSv1.2_2018
+              MinimumProtocolVersion: !Ref MinimumTLSVersion
             Logging:
               Bucket: !GetAtt S3AccessLoggingBucket.DomainName
               IncludeCookies : "true"
@@ -95,7 +98,7 @@ Resources:
           Timeout: 5
           AutoPublishAlias: LIVE
     LambdaEdgeFunctionRole:
-      Type: "AWS::IAM::Role"
+      Type: AWS::IAM::Role
       Properties:
           Path: "/"
           ManagedPolicyArns:
