Partly fix #11 issue from upstream

--- a/template.yaml
+++ b/template.yaml
@@ -64,7 +64,7 @@ Resources:
               CloudFrontDefaultCertificate: 'true'
               MinimumProtocolVersion: !Ref MinimumTLSVersion
             Logging:
-              Bucket: !GetAtt LogBucketName.DomainName
+              Bucket: !GetAtt LoggingBucket.DomainName
               IncludeCookies : "true"
               Prefix: "cloudfront/"
             Enabled: 'true'
