Santizing error window

--- a/src/js/package.json
+++ b/src/js/package.json
@@ -15,9 +15,11 @@
 		"format": "node_modules/prettier/bin-prettier.js --write src/js/**/*.js"
 	},
 	"dependencies": {
-		"axios": "^0.21.2",
+		"axios": "^1.6.2",
 		"base64url": "^3.0.1",
 		"cookie": "^0.3.1",
+		"dompurify": "3.0.6",
+		"jsdom": "23.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"jwk-to-pem": "^1.2.6"
 	}
