Update to support node.js 20.x Adjust handler function entry point from handle -> handler Add profile to the ODIC scope returned Remove need for file system to have Secrets Manager key, and instead use the CloudFront distribution ID provided in the lambda#edge event

--- a/template.yaml
+++ b/template.yaml
@@ -95,8 +95,8 @@ Resources:
         Properties:
           CodeUri: src/js/
           Role: !GetAtt LambdaEdgeFunctionRole.Arn
-          Runtime: nodejs14.x
-          Handler: auth.handle
+          Runtime: nodejs20.x
+          Handler: auth.handler
           Timeout: 5
           AutoPublishAlias: LIVE
     LambdaEdgeFunctionRole:
